[project]

name = "pywalker"
version = "0.1.2"
description = "A utility for discovering and importing Python modules in a package or directory."
readme = "README.md"
authors = [
    { name = "eyueldk" }
]
requires-python = ">=3.9"
dependencies = []
keywords = ["import", "module discovery", "dynamic import", "python"]
license = { text = "MIT" }
homepage = "https://github.com/eyueldk/pywalker"
repository = "https://github.com/eyueldk/pywalker"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/pywalker"]